--- a/index.html
+++ b/index.html
@@ -54,19 +54,22 @@
 }
 </script>
 <script type="text/javascript">
-            function loadAjax(content,pagesend,data,getfunc,method='POST') {
+            function loadAjax(content,pagesend,data=null,getfunc=null,datatype='json',method='POST') { 
                 $.ajax({
   url: pagesend,
   method: method,
   data: {data: data},
-  dataType: 'json', 
-  success: function(result){
+  dataType: datatype, 
+  success: function(result){ console.log(result);
       if(getfunc=='AddProds'){
     AddProds(content,result);
       }else if(getfunc=='AddRepair'){
     AddRepair(content,result);
       }else if(getfunc=='RecRepair'){
     RecRepair(content,result);
+      }else if(getfunc=='logout'){ 
+          alert(result);
+    loadPage(content,'content/NoLogon_index.html');location.reload();
       }
     }
 });
@@ -138,21 +141,21 @@
     <script src="js/genReceiveRepair.js" type="text/javascript"></script> 
 <!------------------------ End My scripts ------------------------>     
     <script type="text/javascript">
-            function getURL(objN){
-	if(objN==null){
-		return window.location.href;
-	}else{
-		objN = objN.replace(/[\[]/,"\\\[").replace(/[\]]/,"\\\]");
-		var regexS = "[\\?&]"+objN+"=([^&#]*)";
-		var regex = new RegExp( regexS );
-		var results = regex.exec( window.location.href );
-		if( results == null )
-			return "";
-		else
-			return results[1];
-	}
-}
-        
+//            function getURL(objN){
+//	if(objN==null){
+//		return window.location.href;
+//	}else{
+//		objN = objN.replace(/[\[]/,"\\\[").replace(/[\]]/,"\\\]");
+//		var regexS = "[\\?&]"+objN+"=([^&#]*)";
+//		var regex = new RegExp( regexS );
+//		var results = regex.exec( window.location.href );
+//		if( results == null )
+//			return "";
+//		else
+//			return results[1];
+//	}
+//}
+//        
 </script>
     <script src="template/plugins/DataTables/jquery.dataTables.min.js"></script>
     <script src="template/plugins/DataTables/dataTables.bootstrap.min.js"></script>
