develop : no pd & request 03/01/61

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   method: method,
   data: {data: data},
   dataType: datatype, 
-  success: function(result){ console.log(result);
+  success: function(result){ 
       if(getfunc=='AddProds'){
     AddProds(content,result);
       }else if(getfunc=='AddRepair'){
