develop : delete function 09/01/61

--- a/content/list_send_result.html
+++ b/content/list_send_result.html
@@ -1,4 +1,4 @@
-            <h2 style="color: #FF8811">รายการส่งซ่อมครุภัณฑ์คอมพิวเตอร์ภายนอก</h2>
+            <h2 style="color: #FF8811"><img src='images/icon_set2/rocket.ico' width='40'> รายการส่งซ่อมครุภัณฑ์คอมพิวเตอร์ภายนอก</h2>
             <ol class="breadcrumb">
               <li><a href="index.html"><i class="หน้าหลัก"></i> หน้าหลัก</a></li>
               <li class="active"><i class="fa fa-wrench"></i> รายการส่งซ่อมภายนอก</li>
@@ -9,7 +9,7 @@
     var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","ความสำคัญ","วันที่รับใบซ่อม","ผู้ซ่อม","พิมพ์ใบส่งซ่อม","บันทึกผลการส่งซ่อม"];
               var CTb = new createTableAjax();
               CTb.GetNewTableAjax('contentTB','JsonData/DT_LSRP.php','JsonData/tempSendData.php',column1
-              ,null,false,false,null,true,'receiveReModal',true,'content/sendRepairPDF.php','เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
+              ,null,null,null,null,false,false,null,true,'receiveReModal',true,'content/sendRepairPDF.php','เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
 </script>
 <div class="row">
     <div class="col-md-12">
