--- a/content/list_prods.html
+++ b/content/list_prods.html
@@ -1,4 +1,4 @@
-            <h2 style="color: blue">รายการครุภัณฑ์</h2>
+            <h2 style="color: blue"><img src='images/icon_set2/dolly.ico' width='40'> รายการครุภัณฑ์</h2>
             <ol class="breadcrumb">
               <li><a href="index.html"><i class="หน้าหลัก"></i> หน้าหลัก</a></li>
               <li class="active"><i class="fa fa-wrench"></i> รายการครุภัณฑ์</li>
@@ -9,7 +9,7 @@
     var column1 = ["id","เลขครุภัณฑ์","ชื่อ","งาน","ติดตั้งเมื่อ","วันที่ย้าย","หมายเหตุ","สถานะ","แก้ไข","ลบ"];
               var CTb = new createTableAjax();
               CTb.GetNewTableAjax('contentTB','JsonData/DT_LP.php','JsonData/tempSendData.php',column1
-              ,'AddProds',true,false,null,false,null,false,null,'ส่งคืน',null,null,'ปรกติ','dbtb');
+              ,'AddProds','pd_product','pd_id','content/list_prods.html',true,false,null,false,null,false,null,'ส่งคืน',null,null,'ปรกติ','dbtb');
               //CTb.GetNewTableAjax('tableDiv','JsonData/DT_LP.php','content/testSendDatat.php',column1,'dbtab');
               
 </script>
