--- a/content/list_repair_order.html
+++ b/content/list_repair_order.html
@@ -1,4 +1,4 @@
-            <h2 style="color: blue">รายการแจ้งซ่อมครุภัณฑ์คอมพิวเตอร์</h2>
+            <h2 style="color: blue"><img src='images/icon_set2/tools.ico' width='40'> รายการแจ้งซ่อมครุภัณฑ์คอมพิวเตอร์</h2>
             <ol class="breadcrumb">
               <li><a href="index.html"><i class="หน้าหลัก"></i> หน้าหลัก</a></li>
               <li class="active"><i class="fa fa-wrench"></i> รายการแจ้งซ่อม</li>
@@ -9,7 +9,7 @@
     var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","หมายเหตุ","อาการ","งาน","ความสำคัญ","ผู้แจ้ง","รับใบแจ้ง","แก้ไข","ลบ"];
               var CTb = new createTableAjax();
               var setattrCTb = CTb.GetNewTableAjax('contentTB','JsonData/DT_LRP.php','JsonData/tempSendData.php',column1
-              ,'AddRepair',true,false,null,true,'receiveModal',false,null,'เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
+              ,'AddRepair','m_repair_pd','repair_id','content/list_repair_order.html',true,false,null,true,'receiveModal',false,null,'เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
               
 </script>
 <div class="row">
