--- a/content/list_repair_result.html
+++ b/content/list_repair_result.html
@@ -1,4 +1,4 @@
-            <h2 style="color: #FFC414">รายการซ่อมครุภัณฑ์คอมพิวเตอร์</h2>
+            <h2 style="color: #FFC414"><img src='images/icon_set2/tools.ico' width='40'> รายการซ่อมครุภัณฑ์คอมพิวเตอร์</h2>
             <ol class="breadcrumb">
               <li><a href="index.html"><i class="หน้าหลัก"></i> หน้าหลัก</a></li>
               <li class="active"><i class="fa fa-wrench"></i> รายการซ่อม</li>
@@ -9,7 +9,7 @@
     var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","ความสำคัญ","วันที่รับใบซ่อม","ผู้ซ่อม","รายละเอียด","บันทึกผลการซ่อม","แก้ไข","ลบ"];
               var CTb = new createTableAjax();
               CTb.GetNewTableAjax('contentTB','JsonData/DT_LRRP.php','JsonData/tempSendData.php',column1
-              ,'AddRepair',true,true,'RecRepair',true,'detailModal',false,null,'เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
+              ,'AddRepair','m_repair_pd','repair_id','content/list_repair_result.html',true,true,'RecRepair',true,'detailModal',false,null,'เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
 </script>
 <div class="row">
     <div class="col-md-12">
