--- a/content/list_repair_result_total.html
+++ b/content/list_repair_result_total.html
@@ -1,4 +1,4 @@
-            <h2 style="color: blue">รายการสรุปผลการซ่อมครุภัณฑ์คอมพิวเตอร์</h2>
+            <h2 style="color: blue"><img src='images/icon_set2/bookshelf.ico' width='40'> รายการสรุปผลการซ่อมครุภัณฑ์คอมพิวเตอร์</h2>
             <ol class="breadcrumb">
               <li><a href="index.html"><i class="หน้าหลัก"></i> หน้าหลัก</a></li>
               <li class="active"><i class="fa fa-wrench"></i> รายการซ่อม</li>
@@ -9,10 +9,10 @@
     var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","ความสำคัญ","วันที่รับใบซ่อม","ผู้ซ่อม","รายละเอียด"];
               var CTb = new createTableAjax();
               CTb.GetNewTableAjax('contentTB','JsonData/DT_LRRPC.php','JsonData/tempSendData.php',column1
-              ,null,false,false,null,true,'detailModal',false,null,'เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
+              ,null,null,null,null,false,false,null,true,'detailModal',false,null,'เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
               
               CTb.GetNewTableAjax('contentTB2','JsonData/DT_LRRPF.php','JsonData/tempSendData.php',column1
-              ,null,false,false,null,true,'detailModal',false,null,'เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb2');
+              ,null,null,null,null,false,false,null,true,'detailModal',false,null,'เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb2');
 </script>
 <div class="row">
     <div class="col-md-12">
