--- a/content/list_user_result.html
+++ b/content/list_user_result.html
@@ -9,7 +9,7 @@
     var column1 = ["ลำดับ","วันที่แจ้ง","เครื่อง/อาการ/ขอข้อมูล","ผู้แจ้งซ่อม","วันที่รับใบซ่อม","ผู้ซ่อม","สถานะ","รายละเอียด"];
               var CTb = new createTableAjax();
               CTb.GetNewTableAjax('contentTB','JsonData/DT_LUR.php','JsonData/tempSendData.php',column1
-              ,null,false,false,null,true,'detailModal',false,null,'ซ่อมไม่ได้','อยู่ระหว่างดำเนินการ',null,'ซ่อมสำเร็จ','dbtb');
+              ,null,null,null,null,false,false,null,true,'detailModal',false,null,'ซ่อมไม่ได้','อยู่ระหว่างดำเนินการ',null,'ซ่อมสำเร็จ','dbtb');
 </script>
 <div class="row">
     <div class="col-md-12">
