develop : Line Notify 11/01/61

--- a/content/info_index.html
+++ b/content/info_index.html
@@ -43,7 +43,7 @@ $.getJSON('JsonData/month.php',function (data) {
                   <p>แจ้งซ่อมทั้งหมด</p>
                 </div>
                 <div class="icon">
-                  <i class="fa fa-bomb"></i>
+                  <i class="fa fa-exclamation-circle"></i>
                 </div>
                 <a href="#" class="small-box-footer">ดูรายละเอียด <i class="fa fa-arrow-circle-right"></i></a>
               </div>
@@ -120,15 +120,15 @@ var column1 = '["เดือน","จำนวนเรื่อง"]';
               var CTb3 = new createTable(column2);
               CTb3.GetTableAjax('JsonData/DT_Top10.php','contentTB3');
 </script>
-<div class="row">
+<!--<div class="row">
        <div class="col-md-4">
             <div class="box box-primary box-solid">
                 <div class="box-header with-border">
                     <h5 class="box-title"><i class="fa fa-calendar"></i> Statistics: <strong class="seyear"></strong></h5>
                     <div class="box-tools pull-right">
                         <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                    </div><!-- /.box-tools -->
-                </div><!-- /.box-header -->
+                    </div> /.box-tools 
+                </div> /.box-header 
                 <div class="box-body">
         <span id="contentTB1"></span>
                 </div></div></div>
@@ -138,8 +138,8 @@ var column1 = '["เดือน","จำนวนเรื่อง"]';
                     <h4 class="box-title"><i class="fa fa-clock-o"></i> User Online </h4>
                     <div class="box-tools pull-right">
                         <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                    </div><!-- /.box-tools -->
-                </div><!-- /.box-header -->
+                    </div> /.box-tools 
+                </div> /.box-header 
                 <div class="box-body">
                     <div id="useronline" class="list-group"></div>
     </div></div></div>
@@ -149,9 +149,9 @@ var column1 = '["เดือน","จำนวนเรื่อง"]';
                     <h4 class="box-title"><i class="fa fa-star"></i> ผู้เขียนแจ้งสูงสุด TOP 10 </h4>
                     <div class="box-tools pull-right">
                         <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                    </div><!-- /.box-tools -->
-                </div><!-- /.box-header -->
+                    </div> /.box-tools 
+                </div> /.box-header 
                 <div class="box-body">
                     <div id="contentTB3"></div>
     </div></div></div>
-</div>
+</div>-->
