develop : config DB & iframe no login page 15/01/61

--- a/content/info_index.html
+++ b/content/info_index.html
@@ -40,7 +40,7 @@ $.getJSON('JsonData/month.php',function (data) {
               <div class="small-box bg-purple">
                 <div class="inner">
                     <h3 id="sum_rm"></h3>
-                  <p>แจ้งซ่อมทั้งหมด</p>
+                  <p>แจ้งทั้งหมด</p>
                 </div>
                 <div class="icon">
                   <i class="fa fa-exclamation-circle"></i>
@@ -66,7 +66,7 @@ $.getJSON('JsonData/month.php',function (data) {
               <div class="small-box bg-red">
                 <div class="inner">
                     <h3 id="sum_rmR"></h3>
-                  <p>ซ่อมไม่ได้</p>
+                  <p>ไม่สำเร็จ</p>
                 </div>
                 <div class="icon">
                   <i class="fa fa-times-circle"></i>
@@ -79,7 +79,7 @@ $.getJSON('JsonData/month.php',function (data) {
               <div class="small-box bg-green">
                 <div class="inner">
                     <h3 id="sum_rmG"><sup style="font-size: 20px"></sup></h3>
-                  <p>ซ่อมสำเร็จ</p>
+                  <p>สำเร็จ</p>
                 </div>
                 <div class="icon">
                   <i class="fa fa-check-circle"></i>
