--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
   success: function(result){ 
       if(getfunc=='AddProds'){
     AddProds(content,result);
+      }else if(getfunc=='AddUser'){
+    AddUser(content,result);
       }else if(getfunc=='AddRepair'){
     AddRepair(content,result);
       }else if(getfunc=='RecRepair'){
@@ -152,6 +154,7 @@
 <!-------------------------- My scripts -------------------------->       
     <script src="js/gen_menu.js" type="text/javascript"></script>
     <script src="js/add_prods.js" type="text/javascript"></script>
+    <script src="js/add_user.js" type="text/javascript"></script>
     <script src="js/add_repair.js" type="text/javascript"></script>
     <script src="js/rec_repair.js" type="text/javascript"></script>
     <script src="js/genReceiveRepair.js" type="text/javascript"></script> 
