develop : manage user 17/01/61

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <ul class='nav navbar-nav' id='gear_side'></ul>
               <ul class='nav navbar-nav' id="gear_side1">
                   <li>
-            <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
+            <a href="#" data-toggle="control-sidebar" id="seting"><i class="fa fa-gears"></i></a>
                 </li>
               </ul>
           </div>
