--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
     AddRepair(content,result);
       }else if(getfunc=='RecRepair'){
     RecRepair(content,result);
+      }else if(getfunc=='HisRepair'){
+    HisRepair(content,result);
       }else if(getfunc=='logout'){ 
           alert(result);
     loadPage(content,'content/NoLogon_index.html');location.reload();
@@ -157,7 +159,9 @@
     <script src="js/add_user.js" type="text/javascript"></script>
     <script src="js/add_repair.js" type="text/javascript"></script>
     <script src="js/rec_repair.js" type="text/javascript"></script>
+    <script src="js/his_repair.js" type="text/javascript"></script>
     <script src="js/genReceiveRepair.js" type="text/javascript"></script> 
+    <script src="js/genHisRepair.js" type="text/javascript"></script> 
 <!------------------------ End My scripts ------------------------>     
     <script type="text/javascript">
 //            function getURL(objN){
