--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
     AddProds(content,result);
       }else if(getfunc=='AddUser'){
     AddUser(content,result);
+      }else if(getfunc=='AddSymptom'){
+    AddSymptom(content,result);
       }else if(getfunc=='AddRepair'){
     AddRepair(content,result);
       }else if(getfunc=='RecRepair'){
@@ -157,6 +159,7 @@
     <script src="js/gen_menu.js" type="text/javascript"></script>
     <script src="js/add_prods.js" type="text/javascript"></script>
     <script src="js/add_user.js" type="text/javascript"></script>
+    <script src="js/add_symptom.js" type="text/javascript"></script>
     <script src="js/add_repair.js" type="text/javascript"></script>
     <script src="js/rec_repair.js" type="text/javascript"></script>
     <script src="js/his_repair.js" type="text/javascript"></script>
