develop : manage acc & no pd 25/01/61

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
     AddUser(content,result);
       }else if(getfunc=='AddSymptom'){
     AddSymptom(content,result);
+      }else if(getfunc=='AddNOPD'){
+    AddNOPD(content,result);
+      }else if(getfunc=='AddAcc'){
+    AddAcc(content,result);
       }else if(getfunc=='AddRepair'){
     AddRepair(content,result);
       }else if(getfunc=='RecRepair'){
@@ -160,6 +164,8 @@
     <script src="js/add_prods.js" type="text/javascript"></script>
     <script src="js/add_user.js" type="text/javascript"></script>
     <script src="js/add_symptom.js" type="text/javascript"></script>
+    <script src="js/add_NOPD.js" type="text/javascript"></script>
+    <script src="js/add_acc.js" type="text/javascript"></script>
     <script src="js/add_repair.js" type="text/javascript"></script>
     <script src="js/rec_repair.js" type="text/javascript"></script>
     <script src="js/his_repair.js" type="text/javascript"></script>
