--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
     AddNOPD(content,result);
       }else if(getfunc=='AddAcc'){
     AddAcc(content,result);
+      } if(getfunc=='AddStore'){
+    AddStore(content,result);
       }else if(getfunc=='AddRepair'){
     AddRepair(content,result);
       }else if(getfunc=='RecRepair'){
@@ -166,11 +168,13 @@
     <script src="js/add_symptom.js" type="text/javascript"></script>
     <script src="js/add_NOPD.js" type="text/javascript"></script>
     <script src="js/add_acc.js" type="text/javascript"></script>
+    <script src="js/add_store.js" type="text/javascript"></script>
     <script src="js/add_repair.js" type="text/javascript"></script>
     <script src="js/rec_repair.js" type="text/javascript"></script>
     <script src="js/his_repair.js" type="text/javascript"></script>
     <script src="js/genReceiveRepair.js" type="text/javascript"></script> 
     <script src="js/genHisRepair.js" type="text/javascript"></script> 
+    <script src="js/store_modal.js" type="text/javascript"></script> 
 <!------------------------ End My scripts ------------------------>     
     <script type="text/javascript">
 //            function getURL(objN){
