--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
         <!-- Logo -->
         <a href="index.html" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
-          <span class="logo-mini" style="color: yellow"><b>M</b>-b</span>
+          <span class="logo-mini" style="color: yellow"><b>M</b>-V1</span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg" style="color: yellow"><b>Maintenance</b> V.Beta</span>
+          <span class="logo-lg" style="color: yellow"><b>Maintenance</b> V.1.0</span>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
