--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
     AddNOPD(content,result);
       }else if(getfunc=='AddAcc'){
     AddAcc(content,result);
-      } if(getfunc=='AddStore'){
+      }else if(getfunc=='AddStore'){
     AddStore(content,result);
+      }else if(getfunc=='AddNotify'){
+    AddNotify(content,result);
       }else if(getfunc=='AddRepair'){
     AddRepair(content,result);
       }else if(getfunc=='RecRepair'){
@@ -169,6 +171,7 @@
     <script src="js/add_NOPD.js" type="text/javascript"></script>
     <script src="js/add_acc.js" type="text/javascript"></script>
     <script src="js/add_store.js" type="text/javascript"></script>
+    <script src="js/add_notify.js" type="text/javascript"></script>
     <script src="js/add_repair.js" type="text/javascript"></script>
     <script src="js/rec_repair.js" type="text/javascript"></script>
     <script src="js/his_repair.js" type="text/javascript"></script>
