--- a/login_page.html
+++ b/login_page.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>ระบบแจ้งซ่อม</title>
                 <!-- Bootstrap 3.3.5 -->
         <link rel="stylesheet" href="template/bootstrap/css/bootstrap.min.css">
         <!-- Font Awesome -->
