--- a/content/list_repair_order.html
+++ b/content/list_repair_order.html
@@ -6,7 +6,7 @@
              
 <script language="Javascript" type="text/javascript">
     //var column1 = '{"รายการความเสี่ยงที่รอ RM man มาตรวจสอบ":["เลขที่","รายการ","เกิดขึ้นเมื่อ","ได้รับเมื่อ"]}';
-    var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","หมายเหตุ","อาการ","งาน","ความสำคัญ","ผู้แจ้ง","รับใบแจ้ง","แก้ไข","ลบ"];
+    var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","เครื่อง","หมายเหตุ","อาการ","งาน","ความสำคัญ","ผู้แจ้ง","รับใบแจ้ง","แก้ไข","ลบ"];
               var CTb = new createTableAjax();
               var setattrCTb = CTb.GetNewTableAjax('contentTB','JsonData/DT_LRP.php','JsonData/tempSendData.php',column1
               ,'AddRepair','m_repair_pd','repair_id','content/list_repair_order.html',true,false,null,true,'receiveModal',false,null,'เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
