--- a/content/list_repair_result.html
+++ b/content/list_repair_result.html
@@ -6,7 +6,7 @@
              
 <script language="Javascript" type="text/javascript">
     //var column1 = '{"รายการความเสี่ยงที่รอ RM man มาตรวจสอบ":["เลขที่","รายการ","เกิดขึ้นเมื่อ","ได้รับเมื่อ"]}';
-    var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","ความสำคัญ","วันที่รับใบซ่อม","ผู้ซ่อม","รายละเอียด","บันทึกผลการซ่อม","แก้ไข","ลบ"];
+    var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","เครื่อง","ความสำคัญ","วันที่รับใบซ่อม","ผู้ซ่อม","รายละเอียด","บันทึกผลการซ่อม","แก้ไข","ลบ"];
               var CTb = new createTableAjax();
               CTb.GetNewTableAjax('contentTB','JsonData/DT_LRRP.php','JsonData/tempSendData.php',column1
               ,'AddRepair','m_repair_pd','repair_id','content/list_repair_result.html',true,true,'RecRepair',true,'detailModal',false,null,'เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
@@ -53,8 +53,8 @@
   
    $.getJSON('JsonData/repair_Data.php',{data: recipient},function (data) {
         $('span#detail').empty().append("ผู้แจ้งซ่อม : "+data.inform+"  &nbsp;&nbsp;งาน : "+data.depName+"<br>"
-                            +"เลขครุภัณฑ์ : "+data.pd_number+"  &nbsp;&nbsp;หมายเหตุ : "+data.note+"<br>"
-                            +"อาการ : "+data.symptom+"<br>วันที่แจ้ง : "+data.repair_date+" &nbsp;&nbsp;<b style='color: red;'>"+data.vital+"</b>  &nbsp;&nbsp;วันที่รับใบแจ้ง : "+data.receive_date);
+                            +"เลขครุภัณฑ์/อาการ/ความต้องการ : "+data.pd_number+"  &nbsp;&nbsp;หมายเหตุ : "+data.note+"<br>"
+                            +"รายละเอียดอาการ : "+data.symptom+"<br>วันที่แจ้ง : "+data.repair_date+" &nbsp;&nbsp;<b style='color: red;'>"+data.vital+"</b>  &nbsp;&nbsp;วันที่รับใบแจ้ง : "+data.receive_date);
 
     });
 })
@@ -80,7 +80,7 @@
     </div>
   </div>
 </div>
-<script language="Javascript" type="text/javascript">
+<!--<script language="Javascript" type="text/javascript">
     $('#receiveModal').on('show.bs.modal', function (event) {
   var button = $(event.relatedTarget)
   var recipient = button.data('whatever')
@@ -141,4 +141,4 @@
     });
 })
    
-</script>
+</script>-->
