--- a/content/list_send_result.html
+++ b/content/list_send_result.html
@@ -6,7 +6,7 @@
              
 <script language="Javascript" type="text/javascript">
     //var column1 = '{"รายการความเสี่ยงที่รอ RM man มาตรวจสอบ":["เลขที่","รายการ","เกิดขึ้นเมื่อ","ได้รับเมื่อ"]}';
-    var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","ความสำคัญ","วันที่รับใบซ่อม","ผู้ซ่อม","พิมพ์ใบส่งซ่อม","บันทึกผลการส่งซ่อม"];
+    var column1 = ["ลำดับ","วันที่แจ้ง","เลขครุภัณฑ์","เครื่อง","ความสำคัญ","วันที่รับใบซ่อม","ผู้ซ่อม","พิมพ์ใบส่งซ่อม","บันทึกผลการส่งซ่อม"];
               var CTb = new createTableAjax();
               CTb.GetNewTableAjax('contentTB','JsonData/DT_LSRP.php','JsonData/tempSendData.php',column1
               ,null,null,null,null,false,false,null,true,'receiveReModal',true,'content/sendRepairPDF.php','เร่งด่วน',null,null,'ไม่เร่งด่วน','dbtb');
