--- a/index.html
+++ b/index.html
@@ -114,6 +114,15 @@
             .stick-top { top: 0; }
             .stick-bottom { bottom: 0; }
         </style>
+        <style type="text/css">
+            .block {
+	width: 180px;
+	height: 180px;
+	margin: 2px;
+	background: #FFFFFF;
+	float: right;
+}
+        </style>
     </head>
     <body class="hold-transition skin-red-light fixed sidebar-mini">
 <!--               <img src="images/black_ribbon_bottom_right.png" class="black-ribbon stick-bottom stick-right"/>-->
@@ -124,7 +133,7 @@
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini" style="color: yellow"><b>M</b>-V1</span>
           <!-- logo for regular state and mobile devices -->
-          <span class="logo-lg" style="color: yellow"><b>Maintenance</b> V.1.0</span>
+          <span class="logo-lg" style="color: yellow"><b>Maintenance</b> V.1.1</span>
         </a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
@@ -176,6 +185,7 @@
     <script src="js/rec_repair.js" type="text/javascript"></script>
     <script src="js/his_repair.js" type="text/javascript"></script>
     <script src="js/genReceiveRepair.js" type="text/javascript"></script> 
+    <script src="js/photoPD.js" type="text/javascript"></script>
     <script src="js/genHisRepair.js" type="text/javascript"></script> 
     <script src="js/store_modal.js" type="text/javascript"></script> 
 <!------------------------ End My scripts ------------------------>     
