develop : up version 1.2 09/03/61

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     RecRepair(content,result);
       }else if(getfunc=='HisRepair'){
     HisRepair(content,result);
+      }else if(getfunc=='ListDev'){
+    ListDev(content,result);
       }else if(getfunc=='logout'){ 
           alert(result);
     loadPage(content,'content/NoLogon_index.html');location.reload();
@@ -188,6 +190,12 @@
     <script src="js/photoPD.js" type="text/javascript"></script>
     <script src="js/genHisRepair.js" type="text/javascript"></script> 
     <script src="js/store_modal.js" type="text/javascript"></script> 
+    <script src="js/rec_dev.js" type="text/javascript"></script> 
+    <script src="js/detail_dev.js" type="text/javascript"></script>
+    <script src="js/add_prog.js" type="text/javascript"></script>
+    <script src="js/add_module.js" type="text/javascript"></script>
+    <script src="js/list_dev.js" type="text/javascript"></script>
+    
 <!------------------------ End My scripts ------------------------>     
     <script type="text/javascript">
 //            function getURL(objN){
@@ -245,7 +253,36 @@
     <script src="template/dist/js/pages/dashboard.js"></script>-->
     <!-- AdminLTE for demo purposes -->
     <script src="template/dist/js/demo.js"></script>
-
+    <script language="Javascript">
+                    function MakeHour (content) {
+            for (var i = 0; i <= 23; i++) {
+//                                    if (i == takeTime.substring (0, 2)) {
+//        var selected = 'selected';
+//    } else {
+//        var selected = '';
+//    }
+                                    if (i < 10) {
+        $(content).append($("<option value='0"+i+"'>0"+i+"</option>"));
+    } else {
+        $(content).append($("<option value='"+i+"'>"+i+"</option>"));
+    }
+                                }
+        }                        
+            function MakeMinute (content) {        
+                                for (var i = 0; i <= 59; i++) {
+//                                    if (i == takeTime.substring (3, 5)) {
+//        var selected = 'selected';
+//    } else {
+//        var selected = '';
+//    }
+                                    if (i < 10) {
+        $(content).append($("<option value='0"+i+"'>0"+i+"</option>"));
+    } else {
+        $(content).append($("<option value='"+i+"'>"+i+"</option>"));
+    }
+                                }
+                            } 
+    </script>
     <script language="JavaScript">
             var HttPRequest = false;
             function doCallAjax(Sort) {
