--- a/content/list_send_result.html
+++ b/content/list_send_result.html
@@ -70,7 +70,7 @@
                                     ,$("<input type='hidden' id='method' name='method'>"));
                     $("#acc_price").attr("onKeyUp","javascript:inputDigits(this);");                
                     $('#cause_sel').empty().append("<label for='cause' class='control-label'>สรุปอาการเสีย</label><select name='cause' id='cause' class='form-control'></select>");
-                    $('#rece_pd_sel').empty().append("<label for='repairer' class='control-label'>ผู้รับการซ่อม</label><select name='rece_pd' id='rece_pd' class='form-control select2'></select>");
+                    $('#rece_pd_sel').empty().append("<label for='rece_pd' class='control-label'>ผู้รับการซ่อม</label><select name='rece_pd' id='rece_pd' class='form-control select2'></select>");
                                 $("select#cause").addClass("select2");
                     $("select#cause").append($("<option value=''> เลือกสรุปอาการเสีย </option>"));
                     $.getJSON('JsonData/symmptom_category.php', function (GD) {
@@ -94,8 +94,20 @@
                                 modal.find('.modal-body input#method').val('receiveRe_repair')
                                 
                                 $("button#submreceiveRe").click(function(e) {
-                                        e.preventDefault();
-                                        modal.modal('hide');
+                                        
+                                        if($("#send_price").val()==''){
+                                            alert("กรุณาระบุราคาด้วยครับ!!!");
+                                            $("#send_price").focus();
+                                        }else if($("#cause").val()==''){
+                                            alert("กรุณาสรุปอาการเสียด้วยครับ!!!");
+                                            $("#cause").focus();
+                                        }else if($("#repair_detail").val()==''){
+                                            alert("กรุณาระบุรายละเอียดด้วยครับ!!!");
+                                            $("#repair_detail").focus();
+                                        }else if($("#rece_pd").val()==''){
+                                            alert("กรุณเลือกผู้รับด้วยครับ!!!");
+                                            $("#rece_pd").focus();
+                                        }else{
         				$.ajax({
 					   type: "POST",
 					   url: "process/prcrepair.php",
@@ -113,6 +125,9 @@
                                                  return false;
 					   }
 					 });
+                                         modal.modal('hide');
+                                     }
+                                     e.preventDefault();
         });
     });
 })
