--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
         <script src="template/plugins/jQuery/jQuery-2.1.4.min.js"></script>
         <!-------------------------- My scripts -------------------------->       
         <script src="js/gen_menu.js" type="text/javascript"></script>
+        <script src="js/refresh_repair.js" type="text/javascript"></script>
         <script src="js/add_prods.js" type="text/javascript"></script>
         <script src="js/add_user.js" type="text/javascript"></script>
         <script src="js/add_symptom.js" type="text/javascript"></script>
@@ -315,7 +316,7 @@
                 $(content).append(option);
             }
         </script>
-        <script language="JavaScript">
+<!--        <script language="JavaScript">
             var HttPRequest = false;
             function doCallAjax(Sort) {
                 HttPRequest = false;
@@ -358,7 +359,7 @@
                 }
             }
         </script>
-        <!-- Notifications: style can be found in dropdown.less -->
+         Notifications: style can be found in dropdown.less 
         <script language="JavaScript">
             function bodyOnload()
             {
@@ -369,7 +370,11 @@
             {
                 bodyOnload();
             }
-        </script>
+                </script>-->
+                <script language="JavaScript">
+                    var myRef = setInterval(function(){ RefreshRepair () }, 15000);
+                </script>
+        
         <script type="text/javascript">
             function popup(url, name, windowWidth, windowHeight) {
                 myleft = (screen.width) ? (screen.width - windowWidth) / 2 : 100;
