--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
                             ListDev(content, result);
                         } else if (subgetfunc[0] == 'AddPDCate') {
                             AddPDCate(content, result);
+                        } else if (subgetfunc[0] == 'SymptomGroup01') {
+                            SymptomGroup01(content, result);
                         } else if (subgetfunc[0] == 'logout') {
                             alert(result);
                             loadPage(content, 'content/NoLogon_index.html');
@@ -238,6 +240,7 @@
         <script src="js/detail_dev.js" type="text/javascript"></script>
         <script src="js/add_prog.js" type="text/javascript"></script>
         <script src="js/report_symptom_group.js" type="text/javascript"></script>
+        <script src="js/report_symptom_group01.js" type="text/javascript"></script>
         <!-- <script src="js/add_module.js" type="text/javascript"></script> -->
         <script src="js/list_dev.js" type="text/javascript"></script>
         <script src="js/add_pdcate.js" type="text/javascript"></script>
