--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
                             AddPDCate(content, result);
                         } else if (subgetfunc[0] == 'SymptomGroup01') {
                             SymptomGroup01(content, result);
+                        } else if (subgetfunc[0] == 'SymptomGroup02') {
+                            SymptomGroup02(content, result);
                         } else if (subgetfunc[0] == 'logout') {
                             alert(result);
                             loadPage(content, 'content/NoLogon_index.html');
@@ -178,7 +180,7 @@
                     <!-- mini logo for sidebar mini 50x50 pixels -->
                     <span class="logo-mini" style="color: yellow"><b>M</b>-V1</span>
                     <!-- logo for regular state and mobile devices -->
-                    <span class="logo-lg" style="color: yellow"><b>Maintenance</b> V.1.4</span>
+                    <span class="logo-lg" style="color: yellow"><b>Maintenance</b> V.1.5</span>
                 </a>
                 <!-- Header Navbar: style can be found in header.less -->
                 <nav class="navbar navbar-static-top" role="navigation">
@@ -241,6 +243,7 @@
         <script src="js/add_prog.js" type="text/javascript"></script>
         <script src="js/report_symptom_group.js" type="text/javascript"></script>
         <script src="js/report_symptom_group01.js" type="text/javascript"></script>
+        <script src="js/report_symptom_group02.js" type="text/javascript"></script>
         <!-- <script src="js/add_module.js" type="text/javascript"></script> -->
         <script src="js/list_dev.js" type="text/javascript"></script>
         <script src="js/add_pdcate.js" type="text/javascript"></script>
