developer : gen QR code manual 18/03/2020

--- a/testQRcode.html
+++ b/testQRcode.html
@@ -143,7 +143,7 @@
                 <p>
                     <form id="frmgenQR">
                         <div id="qr-input">
-                            <input name="gn-val[]" type='text' class='form-control select2' id="gn-val[]" required></select>
+                            <input name="gn-val[]" type='text' class='form-control' id="gn-val[]" required></select>
                         </div><p><p>
                         <input type="number" class="qr-size" value="60" min="20" max="500"><b> : ขนาด</b>
                         <input type="button" class="generate-qr-code" value="Generate QRCode" id="gn-btn" />
